# marketing112

./: .env.example  .gitignore  README.md  ad  competitor_analysis_report_pt.md  creative_review_feedback.md  final_info_product_launch_plan_pt.md  market_research_report_pt.md  pyproject.toml  requirements.txt  sales_page_copy_draft_pt.md
oldReports/: campaign_idea_task.md  copy_creation_task.md  marketing_strategy_task.md  project_competitors_task.md  project_understanding_task.md  report.md  research_task.md
reports/: 10email_sequence_sales_draft_pt.md  11social_media_launch_posts_draft_pt.md  12creative_review_feedback.md  13final_info_product_launch_plan_pt.md  1structured_project_context_pt.md  2market_research_report_pt.md  3competitor_analysis_report_pt.md  4marketing_strategy_report_pt.md  5launch_angle_and_hook_report_pt.md  6lead_magnet_brief_report_pt.md  7optin_page_copy_draft_pt.md  8sales_page_copy_draft_pt.md  9email_sequence_prelaunch_draft_pt.md
src/marketing112/: app.py  crew.py  crewV1.py  inputs.txt  inputs.txt.example  main.py  mainV1.py  style.css
src/marketing112/config/: agents.yaml  tasks.yaml  tasksV1.yaml
src/marketing112/utils/: __init__.py  report_archiver.py  util.py
